src/test/ui/empty/empty-struct-braces-pat-1.stderr
error[E0532]: expected unit struct, unit variant or constant, found struct variant `E::Empty3`
  --> $DIR/empty-struct-braces-pat-1.rs:24:9
   |
LL |     Empty3 {}
   |     --------- `E::Empty3` defined here
...
LL |         E::Empty3 => ()
   |         ^^^^^^^^^ did you mean `E::Empty3 { /* fields */ }`?

error[E0532]: expected unit struct, unit variant or constant, found struct variant `XE::XEmpty3`
  --> $DIR/empty-struct-braces-pat-1.rs:31:9
   |
LL |         XE::XEmpty3 => ()
   |         ^^^^-------
   |         |   |
   |         |   help: a unit variant with a similar name exists: `XEmpty4`
   |         did you mean `XE::XEmpty3 { /* fields */ }`?
   | 
  ::: $DIR/auxiliary/empty-struct.rs:7:5
   |
LL |     XEmpty4,
   |     ------- similarly named unit variant `XEmpty4` defined here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
